style: fixes to retail layout on mobile

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -623,6 +623,9 @@ main {
     @media only screen and (max-width: $tablet) {
       flex-direction: column-reverse;
       height: 100%;
+      order: 3;
+      border-bottom: none;
+      border-top: $default-border;
 
       .retail-photo {
         height: 250px;
